<resources>
    <string name="app_name">User Navigation HW</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="ice_cream_sandwich_description">An Ice Cream Sandwich</string>
    <string name="froyo_description">A FroYo</string>
    <string name="donut_description">A Donut</string>
    <string name="four_description">A Number Four</string>
    <string name="five_description">A Number Five</string>

    <string name="title_activity_ice_cream">You have chosen Ice Cream.</string>
    <string name="title_activity_froyo">You have chosen FroYo.</string>
    <string name="title_activity_donut">You have chosen Donut.</string>
    <string name="title_activity_four">You have chosen a number four.</string>
    <string name="title_activity_five">You have chosen a number Five.</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_tempo">tempo</string>
</resources>